Zarządzanie plikiem fallbacku
